--- a/hello/index.html
+++ b/hello/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="title" content="Aqidun - A Tool To Make Meetings Easier" />
+    <meta
+      name="description"
+      content="A tool to nicely present the details of a meeting and simplify the way attendees share their ideas."
+    />
+    <meta name="keywords" content="chat, tool, poster, meeting" />
+    <meta name="robots" content="index, follow" />
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello</title>
+    <title>Aqidun - A Tool To Make Meetings Easier</title>
+    <script type="module" crossorigin src="/assets/index.52fcc1c5.js"></script>
+    <link rel="stylesheet" href="/assets/index.0a272d5d.css">
   </head>
   <body>
-    <h1>Hello</h1>
+    <div id="root"></div>
+    
   </body>
 </html>
